Creates the first section except the header links position and button design

--- a/project_landing-page/index.html
+++ b/project_landing-page/index.html
@@ -10,6 +10,7 @@
     
 <body>
     <div class="header">
+        <div class="header-top">
         <div class="logo">Header Logo</div>
         <div class="right_elements">
             <ul>
@@ -19,14 +20,19 @@
 
             </ul>
         </div>
-
-        <div class="headerbody">
-            <h1>This website is awesome</h1>
+    </div>
+        <div class="headermain">
+         <div class="headerbody">
+            <h1 class="heading">This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button class="button1">Sign up</button>
-            <img align="right" src="2.png" alt="this is a placeholder for an image" width="500" height="700">
 
+         </div>
+         <img class="image" align="right" src="placeholder.png" alt="this is a placeholder for an image" width="400" height="200">
         </div>
+
+
+
     </div>
 
 </body>
