Finishes the first container(header) starts the second container(information)

--- a/project_landing-page/index.html
+++ b/project_landing-page/index.html
@@ -28,10 +28,18 @@
             <button class="button1" >Sign up</button>
 
          </div>
-         <img class="image" align="right" src="placeholder.png" alt="this is a placeholder for an image" width="400" height="200">
+         <img class="image" align="right" src="placeholder.jpeg" alt="this is a placeholder for an image" width="400" height="200">
         </div>
 
 
+
+    </div>
+
+    <div class="information">
+        
+        <div class="info-head">
+           Some random information.
+        </div>
 
     </div>
 
