--- a/project_landing-page/index.html
+++ b/project_landing-page/index.html
@@ -28,7 +28,9 @@
             <button class="button1" >Sign up</button>
 
          </div>
-         <img class="image" align="right" src="placeholder.jpeg" alt="this is a placeholder for an image" width="400" height="200">
+         <div class="image">
+         <img src="placeholder.jpeg" alt="this is a placeholder for an image" width="400" height="200">
+         </div>
         </div>
 
 
@@ -41,6 +43,35 @@
            Some random information.
         </div>
 
+        <div class="info-images">
+            <figure>
+              <img class="info_image" src="img1.jpg" >
+              <figcaption class="caption">this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img class="info_image" src="img2.jpg" >
+                <figcaption class="caption">this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img class="info_image" src="img3.jpg" >
+                <figcaption class="caption">this is some subtext under an illustration or image</figcaption>
+            </figure>
+            <figure>
+                <img class="info_image" src="img4.jpg" >
+                <figcaption class="caption">this is some subtext under an illustration or image</figcaption>
+            </figure>
+      
+        </div>
+
+    </div>
+
+    <div class="quote">
+        <figure>
+
+        <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+        <figcaption class="quote-cite"> &mdash; Thor, God of Thunder</figcaption>
+
+        </figure>
     </div>
 
 </body>
