--- a/project_landing-page/index.html
+++ b/project_landing-page/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
     
-<body>
+<body class="body">
     <div class="header">
         <div class="header-top">
         <div class="logo">Header Logo</div>
         <div class="right_elements">
             <ul>
-                <li><a href="#">header link one</li>
-                <li><a href="#">header link two</li>
-                <li><a href="#">header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
 
             </ul>
         </div>
@@ -73,6 +73,19 @@
 
         </figure>
     </div>
+
+    <div class="signup">
+       <div class="signuptext">
+        <p class="firstline">Call to action! It's time! </p>
+        <p class="secondline">Sign up for our product by clicking that button right over there!</p>
+       </div>
+        <button class="button2">Sign up</button>
+    </div>
+
+    <footer class="footer">
+        Copyright © The Odin Project 2021
+    </footer>
+
 
 </body>
 </html>
